DEV Update Jobs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Fernando Magiag</h1>
-            <h2>Systems Analyst</h2>
+            <h2>Mobile Developer</h2>
             <a href="https://www.dropbox.com/s/0a5p9i0wemb92ew/Resume.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -86,27 +86,35 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2016 – Now">
+                <h3>Lalubema, Belo Horizonte-MG, Brazil</h3>
+                <h4>Android Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Developer of Android Applications.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2014 – August 2016">
+                <h3>Pontomobi, Belo Horizonte-MG, Brazil</h3>
+                <h4>Systems Analyst</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Design and development of Android Applications, Website mobile , Landing Pages, Banners Rich Media and games for mobile web.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="February 2011 – December 2012">
+                <h3>Banco do Brasil, Belo Horizonte-MG, Brazil</h3>
+                <h4>Internship in Java Development</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Design and development of Intranet Portal in Java Web Application, Devel- opment of web templates and interfaces. Management of SQL databases.
+                </p>
+            </div>
+
+            <div data-date="March 2010 – January 2011">
+                <h3>Fundação Clovis Salgado, Belo Horizonte-MG, Brazil</h3>
+                <h4>Internship in Help Desk</h4>
+                <p>
+                    Service of Help Desk, Management and migration of servers, Preventive and corrective maintenance of computers and printers, Backup routines.
                 </p>
             </div>
         </div>
