--- a/index.html
+++ b/index.html
@@ -124,28 +124,35 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Centro Universitário UniSEB</h3>
+            <span class="education-date">2016 - 2017</span>
+            <h4>MBA Engineering and Innovation</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Project: System Applied to Incentive of Sport Collective
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>SENAI - Belo Horizonte-MG</h3>
+            <span class="education-date">2011 - 2013</span>
+            <h4>Technical Course in Electronics</h4>
+            <p>
+                Project: Energy Monitoring and Control
+            </p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>Anhanguera Belo Horizonte-MG</h3>
+            <span class="education-date">2009 - 2012</span>
+            <h4>Bachelor of Information Systems</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Program for Scienti c Initiation Anhanguera - PIC 2012.
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Publication: Distributed Processing Client Architecture in cDNA Project.
                 </li>
             </ul>
         </div>
