DEV Update about me

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Acting with software development for more than 7 years, working with projects of large companies.<br><br>
+			Bachelor of Information Systems and currently responsible for the Android mobile development of a group of apps responsible for managing condominiums.<br><br>
+			Always seeking perfection and learning new things, enjoying working with R & D, seeking to carry out innovative projects and contribute in some way to society.<br><br>
+			Skills: native android, web mobile (HTML5, Javascript, CSS3, NodeJs, React and Angular), landing pages, games (createjs), rich media.<br><br>
                     </p>
                 </div>
             </div>
