--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-            <li>
+            <!--<li>
                 <a href="#projects">Projects</a>
-            </li>
+            </li>-->
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -161,7 +161,7 @@
     </div>
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
+    <!--<div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -198,7 +198,7 @@
                 <!-- End .project -->
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- End #projects -->
 
     <div id="skills">
