DEV Add Projects

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-            <!--<li>
+            <li>
                 <a href="#projects">Projects</a>
-            </li>-->
+            </li>
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -161,21 +161,21 @@
     </div>
     <!-- End #education -->
 
-    <!--<div id="projects" class="background-alt">
+    <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://lh4.ggpht.com/r1fmfTB1Qkxi_jL1wJG3JqLmh-XNgKKHJC00-tiH_1uBKvsTaje4y8J7IvkCnHqCqJo=w300-rw" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>CONNECTT Condomínio</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Development of new features and maintenance of the App responsible for the management of condominiums developed by the company Laubema Sistemas Ltda.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.lalubema.meucondominio">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -183,15 +183,127 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://lh3.googleusercontent.com/W9PioUgYPKUDpFhkSLDemiQBiTG9_Qx29ufbKrfzfOLTOBhclPeyD3Q8neE-M-BaRO1n=w300-rw" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Somattos Connect</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company Sommatos developed by the company Laubema Sistemas Ltda.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.lalubema.somattos">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/24slP2MA4oZpwsAzB_gVym9yX2j4Rbp5OWOfSbXRj1BUzhyMx_yCT0QimEQnoBq_Aeir=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Smart Home - MVituzzo</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company MVituzzo developed by the company Laubema Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.mvituzzo.smarthome">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/ZEKUi_xeSUh3HSf4WEYNRtx8-6juTMolTdm7nNsoHzlD_cXSf9691Hkh7ftHMPBHWQ=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Gafisa Home & Share</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company Gafisa Home & Share developed by the company Laubema Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.lalubema.gafisa.smart">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/Lvl4gS7iwlZa-Kr0EuKlCTGI9Dc4nMEJpK_f0ltKydxji3CIrZuT3ly6iyzTls0oIA=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Viver MRV</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company MRV developed by the company Laubema Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=br.com.mrv.appmorador">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/m-6tYMuy9pLgsCcUBuK1oiSlK9xTcfxqvKBmfIzPCgc4mOADtu2ykqe0LNUCTTgkpdCq=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Patrimar Access</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company Patrimar developed by the company Laubema Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.patrimar.access">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/gHqNgTQJhOQYCazoYgMompfUvkp7T3GsU6Yd8X776vrDBpnnPaKDTl50646HOG2tV4Pq=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Beconnected</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of condominiums of the construction company Beco Castelo developed by the company Laubema Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.becocastelo.beconnected">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh3.googleusercontent.com/PArZKLIEF7wK6trl6JKqxr8k_1iUZO16BJ1pIxGUlE-itvzgUrjli5eSpUo9Pgnu-MIR=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Meu Vivo Móvel</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the management of mobile phone plan of the operator VIVO developed by the company Pontomobi Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=br.com.vivo">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://lh4.ggpht.com/friqlV9pPlNEQtM1mesSxKrjl1Kaymi8W-VVp-8XG7S4HIlZoasTLX5BfrYcwK8YZvI=w300-rw" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>5 à sec</h3>
+                        <p>
+                            Development of new features and maintenance of the App responsible for the search of information and laundry units 5 à sec developed by the company Pontomobi Sistemas Ltda.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.pontomobi.asec">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
