DEV Add Showcase link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <h1>Fernando Magiag</h1>
             <h2>Mobile Developer</h2>
             <a href="https://www.dropbox.com/s/0a5p9i0wemb92ew/Resume.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
+            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a>
         </div>
         <!-- End #lead-content -->
 
