DEV Test language

--- a/fr/index.html
+++ b/fr/index.html
@@ -43,7 +43,7 @@
                 <a href="#contact">Contact</a>
             </li>
 			<li>
-                <a href="/fr/index.html">Français</a>
+                <a href="/index.html">English</a>
             </li>
         </ul>
     </header>
