DEV Add link resume fr

--- a/fr/index.html
+++ b/fr/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fernando Magiag</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,9 +42,6 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-			<li>
-                <a href="/index.html">English</a>
-            </li>
         </ul>
     </header>
     <!-- End header -->
@@ -53,8 +50,9 @@
         <div id="lead-content">
             <h1>Fernando Magiag</h1>
             <h2>Mobile Developer</h2>
-            <a href="https://www.dropbox.com/s/a0ytt04lmctjx92/Resume.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
-            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a>
+            <a href="https://www.dropbox.com/s/jh8r0yydkwg81le/Resume_fr.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
+            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a><br><br>
+			<a href="../" class="btn-rounded-white">English</a>
         </div>
         <!-- End #lead-content -->
 
