--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-			<li>
-                <a href="/fr/index.html">Français</a>
-            </li>
         </ul>
     </header>
     <!-- End header -->
@@ -54,7 +51,8 @@
             <h1>Fernando Magiag</h1>
             <h2>Mobile Developer</h2>
             <a href="https://www.dropbox.com/s/a0ytt04lmctjx92/Resume.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
-            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a>
+            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a><br><br>
+			<a href="fr/index.html" class="btn-rounded-white">Français</a>
         </div>
         <!-- End #lead-content -->
 
