DEV Translation to french

--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fernando Magiag</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 	<link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
@@ -25,19 +25,19 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
+                <a href="#about">Sur</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience">Expériences</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Éducation</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#projects">Projets</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills">Compétences</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -49,9 +49,9 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Fernando Magiag</h1>
-            <h2>Mobile Developer</h2>
-            <a href="https://www.dropbox.com/s/jh8r0yydkwg81le/Resume_fr.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
-            <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a><br><br>
+            <h2>Développeur Mobile</h2>
+            <a href="https://www.dropbox.com/s/jh8r0yydkwg81le/Resume_fr.pdf?dl=0" class="btn-rounded-white">Télécharger Résumé</a>
+            <a href="http://gaigam.com/" class="btn-rounded-white">Vitrine de Projets</a><br><br>
 			<a href="../" class="btn-rounded-white">English</a>
         </div>
         <!-- End #lead-content -->
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">À propos de moi</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -87,53 +87,53 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Expériences</h2>
         <div id="experience-timeline">
 	    <div data-date="February 2019 – Now">
-                <h3>Avenue Code, Belo Horizonte-MG, Brazil</h3>
-                <h4>Android Developer</h4>
+                <h3>Avenue Code, Belo Horizonte-MG, Brésil</h3>
+                <h4>Développeur Android</h4>
                 <p>
-                    Developer of Android Applications.
+                    Développeur d’applications Android.
                 </p>
             </div>
 		
 	    <div data-date="May 2018 – February 2019">
-                <h3>Zup, Belo Horizonte-MG, Brazil</h3>
-                <h4>Android Developer</h4>
+                <h3>Zup, Belo Horizonte-MG, Brésil</h3>
+                <h4>Développeur Android</h4>
                 <p>
-                    Developer of Android Applications.
+                    Développeur d’applications Android.
                 </p>
             </div>
 		
             <div data-date="August 2016 – May 2018">
-                <h3>Lalubema, Belo Horizonte-MG, Brazil</h3>
-                <h4>Android Developer</h4>
+                <h3>Lalubema, Belo Horizonte-MG, Brésil</h3>
+                <h4>Développeur Android</h4>
                 <p>
-                    Developer of Android Applications.
+                    Développeur d’applications Android.
                 </p>
             </div>
 
             <div data-date="May 2014 – August 2016">
-                <h3>Pontomobi, Belo Horizonte-MG, Brazil</h3>
-                <h4>Systems Analyst</h4>
+                <h3>Pontomobi, Belo Horizonte-MG, Brésil</h3>
+                <h4>Analyste de Systèmes</h4>
                 <p>
-                    Design and development of Android Applications, Website mobile , Landing Pages, Banners Rich Media and games for mobile web.
+                    Conception et développement d’applications Android, Site Web mobile, Landing Pages, Bannières Rich Media et jeux pour le Web mobile.
                 </p>
             </div>
 
             <div data-date="February 2011 – December 2012">
-                <h3>Banco do Brasil, Belo Horizonte-MG, Brazil</h3>
-                <h4>Internship in Java Development</h4>
+                <h3>Banco do Brasil, Belo Horizonte-MG, Brésil</h3>
+                <h4>Stage en Développement Java</h4>
                 <p>
-                    Design and development of Intranet Portal in Java Web Application, Devel- opment of web templates and interfaces. Management of SQL databases.
+                    Conception et développement de Portail Intranet en Application Web Java,Développement de modèles web et d’interfaces. Gestion des bases de données SQL.
                 </p>
             </div>
 
             <div data-date="March 2010 – January 2011">
-                <h3>Fundação Clovis Salgado, Belo Horizonte-MG, Brazil</h3>
-                <h4>Internship in Help Desk</h4>
+                <h3>Fundação Clovis Salgado, Belo Horizonte-MG, Brésil</h3>
+                <h4>Stage au Help Desk</h4>
                 <p>
-                    Service of Help Desk, Management and migration of servers, Preventive and corrective maintenance of computers and printers, Backup routines.
+                    Service de Help Desk, Gestion et migration de serveurs, Maintenancepréventive et corrective d’ordinateurs et d’imprimantes, Routines de sauvegarde.
                 </p>
             </div>
         </div>
@@ -395,7 +395,7 @@
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <script src="../js/scripts.min.js"></script>
     <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
