--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2>Mobile Developer</h2>
             <a href="https://www.dropbox.com/s/a0ytt04lmctjx92/Resume.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
             <a href="http://gaigam.com/" class="btn-rounded-white">Showcase Projects</a><br><br>
-			<a href="fr/index.html" class="btn-rounded-white">Français</a>
+			<a href="fr/" class="btn-rounded-white">Français</a>
         </div>
         <!-- End #lead-content -->
 
@@ -328,7 +328,7 @@
                 <!-- End .project -->
             </div>
         </div>
-    </div>-->
+    </div>
     <!-- End #projects -->
 
     <div id="skills">
