--- a/fr/index.html
+++ b/fr/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 	<link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../libs/font-awesome/css/font-awesome.min.css">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
 </head>
@@ -141,7 +141,7 @@
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading">Éducation</h2>
         <div class="education-block">
             <h3>Centro Universitário UniSEB</h3>
             <span class="education-date">2016 - 2017</span>
@@ -180,7 +180,7 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Projets</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
@@ -328,11 +328,11 @@
                 <!-- End .project -->
             </div>
         </div>
-    </div>-->
+    </div>
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Compétences</h2>
         <ul>
             <li>JavaScript</li>
             <li>Android</li>
@@ -347,13 +347,13 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Entrer en contact</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/fernando@magiag.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
+                <input type="email" name="_replyto" placeholder="Votre email" required>
+                <textarea name="message" placeholder="Votre message" required></textarea>
+                <button type="submit">Envoyer</button>
             </form>
         </div>
         <!-- End #contact-form -->
