DEV wait the time

--- a/fr/index.html
+++ b/fr/index.html
@@ -89,13 +89,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Expériences</h2>
         <div id="experience-timeline">
-	    <div data-date="February 2019 – Now">
+	    <!--<div data-date="February 2019 – Now">
                 <h3>Avenue Code, Belo Horizonte-MG, Brésil</h3>
                 <h4>Développeur Android</h4>
                 <p>
                     Développeur d’applications Android.
                 </p>
-            </div>
+            </div>-->
 		
 	    <div data-date="May 2018 – February 2019">
                 <h3>Zup, Belo Horizonte-MG, Brésil</h3>
