DEV wait the time

--- a/fr/index.html
+++ b/fr/index.html
@@ -97,7 +97,7 @@
                 </p>
             </div>-->
 		
-	    <div data-date="May 2018 – February 2019">
+	    <div data-date="May 2018 – Now">
                 <h3>Zup, Belo Horizonte-MG, Brésil</h3>
                 <h4>Développeur Android</h4>
                 <p>
