DEV Add new job

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-	    <!--<div data-date="February 2019 – Now">
+	    <div data-date="February 2019 – Now">
                 <h3>Avenue Code, Belo Horizonte-MG, Brazil</h3>
                 <h4>Android Developer</h4>
                 <p>
                     Developer of Android Applications.
                 </p>
-            </div>-->
+            </div>
 		
-	    <div data-date="May 2018 – Now">
+	    <div data-date="May 2018 – February 2019">
                 <h3>Zup, Belo Horizonte-MG, Brazil</h3>
                 <h4>Android Developer</h4>
                 <p>
