--- a/index.html
+++ b/index.html
@@ -89,9 +89,17 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-	    <div data-date="February 2019 – Now">
+	    <div data-date="February 2020 – Now">
+                <h3>Construct, Belo Horizonte-MG, Brazil</h3>
+                <h4>Android Engineer</h4>
+                <p>
+                    Developer of Android Applications.
+                </p>
+            </div>
+		
+	    <div data-date="February 2019 – February 2020">
                 <h3>Avenue Code, Belo Horizonte-MG, Brazil</h3>
-                <h4>Android Developer</h4>
+                <h4>Android Engineer</h4>
                 <p>
                     Developer of Android Applications.
                 </p>
