--- a/fr/index.html
+++ b/fr/index.html
@@ -89,13 +89,21 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Expériences</h2>
         <div id="experience-timeline">
-	    <!--<div data-date="February 2019 – Now">
-                <h3>Avenue Code, Belo Horizonte-MG, Brésil</h3>
-                <h4>Développeur Android</h4>
+	    <div data-date="Février 2020 – À présent">
+                <h3>Construct, Belo Horizonte-MG, Brésil</h3>
+                <h4>Ingénieur Android</h4>
                 <p>
                     Développeur d’applications Android.
                 </p>
-            </div>-->
+            </div>
+		
+	    <div data-date="Février 2019 – Février 2020">
+                <h3>Avenue Code, Belo Horizonte-MG, Brésil</h3>
+                <h4>Ingénieur Android</h4>
+                <p>
+                    Développeur d’applications Android.
+                </p>
+            </div>
 		
 	    <div data-date="May 2018 – Now">
                 <h3>Zup, Belo Horizonte-MG, Brésil</h3>
@@ -105,7 +113,7 @@
                 </p>
             </div>
 		
-            <div data-date="August 2016 – May 2018">
+            <div data-date="Août 2016 – Mai 2018">
                 <h3>Lalubema, Belo Horizonte-MG, Brésil</h3>
                 <h4>Développeur Android</h4>
                 <p>
@@ -113,7 +121,7 @@
                 </p>
             </div>
 
-            <div data-date="May 2014 – August 2016">
+            <div data-date="Mai 2014 – Août 2016">
                 <h3>Pontomobi, Belo Horizonte-MG, Brésil</h3>
                 <h4>Analyste de Systèmes</h4>
                 <p>
@@ -121,7 +129,7 @@
                 </p>
             </div>
 
-            <div data-date="February 2011 – December 2012">
+            <div data-date="Février 2011 – Décembre 2012">
                 <h3>Banco do Brasil, Belo Horizonte-MG, Brésil</h3>
                 <h4>Stage en Développement Java</h4>
                 <p>
@@ -129,7 +137,7 @@
                 </p>
             </div>
 
-            <div data-date="March 2010 – January 2011">
+            <div data-date="Mars 2010 – Janvier 2011">
                 <h3>Fundação Clovis Salgado, Belo Horizonte-MG, Brésil</h3>
                 <h4>Stage au Help Desk</h4>
                 <p>
