--- a/fr/index.html
+++ b/fr/index.html
@@ -105,7 +105,7 @@
                 </p>
             </div>
 		
-	    <div data-date="May 2018 – Now">
+	    <div data-date="May 2018 – Février 2019">
                 <h3>Zup, Belo Horizonte-MG, Brésil</h3>
                 <h4>Développeur Android</h4>
                 <p>
